ui alignment fix

--- a/src/libraries/cat/css/less/app.less
+++ b/src/libraries/cat/css/less/app.less
@@ -77,7 +77,7 @@ div.cat-status-container {
 
     #cat-status-content {
 
-      padding: 5px 5px 0px 10px;
+      padding: 5px 5px 0px 40px;
       margin-top: 0px;
       max-height: 250px;
       max-width: 250px;
